--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 image = "0.25.6"
 rustdct = "0.7.1"
 once_cell = "1.21.3"
+rfd = "0.15.3"
 
 [profile.dev.package."*"]
 opt-level = 3
