--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,19 @@
 [package]
 name = "perceptual-hashing"
 version = "0.1.0"
+authors = []
+license = "MIT"
 edition = "2024"
 
 [dependencies]
 image = "0.25.6"
 rustdct = "0.7.1"
 once_cell = "1.21.3"
-rfd = "0.15.3"
+ratatui = "0.29.0"
+color-eyre = "0.6.5"
+crossterm = "0.28.1"
+ratatui-explorer = "0.2.1"
+ratatui-image = "8.0.1"
 
 [profile.dev.package."*"]
 opt-level = 3
