--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,9 @@ license = "MIT"
 edition = "2024"
 
 [dependencies]
-image = { version = "0.25.6", features = ["jpeg"] }
+image = "0.25.6"
 rustdct = "0.7.1"
 once_cell = "1.21.3"
-img_hash = { version = "3.2", default-features = false }
-rfd = "0.15.3"
 ratatui = "0.29.0"
 color-eyre = "0.6.5"
 crossterm = "0.28.1"
